# ansible-homelab-config

./: .ansible-lint-ignore  .ansible-lint.yml  .cz.yaml  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  LICENSE  README.md  ansible.cfg  default_variables.yml  inventory.yml  main.yml  pyproject.toml  requirements.yml  vault.yml
.github/workflows/: lint-ansible.yml
files/certs/consul/: consul-agent-ca-key.pem  consul-agent-ca.pem  homelab-server-consul-0-key.pem  homelab-server-consul-0.pem
files/certs/nomad/: cfssl.json  cli-key.pem  cli.csr  cli.pem  client-key.pem  client.csr  client.pem  nomad-ca-key.pem  nomad-ca.csr  nomad-ca.pem  server-key.pem  server.csr  server.pem
handlers/: main.yml
scripts/: ansible-vault-precommit.sh
tasks/: backups.yml  cluster_storage.yml  consul.yml  debug.yml  docker.yml  interpolated_variables.yml  logrotate.yml  nomad.yml  orchestration_jobs.yml  packages.yml  pull_repositories.yml  sanity.yml  service_prometheus_nodeExporter.yml  tdarr.yml  telegraf.yml
templates/: Tdarr_Node_Config.json.j2  Tdarr_Server_Config.json.j2  consul.hcl.j2  consul.launchd.j2  consul.service.j2  nomad.hcl.j2  nomad.launchd.j2  nomad.service.j2
templates/consul_services/: consul_synology_checks.json.j2  tdarr_service.json.j2
templates/docker_compose_files/: synology_asn-to-ip.yml.j2  synology_consul.yml.j2  synology_diun.yml.j2  synology_jellyfin.yml.j2  synology_plex.yml.j2  synology_promtail.yml.j2  synology_sabnzbd.yml.j2  synology_tdarr_node.yml.j2  synology_telegraf.yml.j2
templates/nomad_jobs/: backup_local_filesystems.hcl  changedetection.hcl  chronograf.hcl  code.hcl  diagnostics.hcl  diun.hcl  freshrss.hcl  gitea.hcl  grafana.hcl  headless-chrome.hcl  hishtory-server.hcl  icloud_backup.hcl  influxdb.hcl  jellyfin.hcl  ladder.hcl  lidarr.hcl  loki.hcl  mealie.hcl  nginx.hcl  nzbhydra.hcl  overseerr.hcl  pihole.hcl  promtail-syslogs.hcl  prowlarr.hcl  radarr.hcl  readarr.hcl  recyclarr.hcl  remove_nzbs.hcl  reverse-proxy.hcl  sabnzbd.hcl  sonarr.hcl  speedtest.hcl  stash.hcl  syncthing.hcl  template-groups.hcl  template-simple.hcl  template_localfs.hcl  uptimekuma.hcl  valentina.hcl  whoogle.hcl  (+1 more)
templates/nomad_jobs/testing/: execTest.hcl
templates/scripts/: service_backups.sh.j2  service_restore.sh.j2  telegraf_custom_metrics.sh.j2  telegraf_speedtest.sh.j2
templates/telegraf/: base_config.conf.j2  custom_metrics.conf.j2  docker.conf.j2  leader.conf.j2  nomad.conf.j2  pingHosts.conf.j2  speedtest.conf.j2  synology.conf.j2  temperature.conf.j2
