[tool.poetry]
    authors     = ["Nate Landau <github@natenate.org>"]
    description = "Ansible scripts to configure my homelab"
    name        = "ansible-homelab-config"
    packages    = [{ include = "ansible_homelab_config" }]
    readme      = "README.md"
    version     = "0.2.0"

    [tool.poetry.dependencies]
        ansible      = "^8.6.0"
        ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
        commitizen   = "^2.40.0"
        poethepoet   = "^0.18.1"
        pre-commit   = "^3.3.3"
        python       = "^3.9"
        yamllint     = "^1.32.0"

    [tool.poetry.group.dev.dependencies]
        black = "^23.11.0"
        sh    = "^2.0.6"
        typos = "^1.16.23"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.black]
    line-length = 100

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.2.0"
    version_files            = ["pyproject.toml:version"]

[tool.poe.tasks]
    pb = """
ansible-playbook
    --vault-password-file .password_file
    main.yml
    -i inventory.yml
    """

    [tool.poe.tasks.lint]
        help = "Run linters"

        [[tool.poe.tasks.lint.sequence]]
            cmd = "yamllint --strict --config-file .yamllint.yml tasks/ handlers/ main.yml inventory.yml default_variables.yml"

        [[tool.poe.tasks.lint.sequence]]
            cmd = "ansible-lint --force-color --config-file .ansible-lint.yml"
