[tool.poetry]
    authors     = ["Nate Landau <github@natenate.org>"]
    description = "Ansible scripts to configure my homelab"
    name        = "ansible-homelab-config"
    packages    = [{ include = "ansible_homelab_config" }]
    readme      = "README.md"
    version     = "0.2.0"

    [tool.poetry.dependencies]
        ansible      = "^9.3.0"
        ansible-lint = { version = "^24.2.1", markers = "platform_system != 'Windows'" }
        commitizen   = "^3.18.3"
        jmespath     = "^1.0.1"
        poethepoet   = "^0.25.0"
        pre-commit   = "^3.6.2"
        python       = "^3.11"
        typos        = "^1.19.0"
        yamllint     = "^1.35.1"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.2.0"
    version_provider         = "poetry"

[tool.poe.tasks]
    pb = """
ansible-playbook
    --vault-password-file .password_file
    main.yml
    -i inventory.yml
    """

    [tool.poe.tasks.lint]
        help = "Run linters"

        [[tool.poe.tasks.lint.sequence]]
            cmd = "yamllint --strict --config-file .yamllint.yml tasks/ handlers/ main.yml inventory.yml default_variables.yml"

        [[tool.poe.tasks.lint.sequence]]
            cmd = "ansible-lint --force-color --config-file .ansible-lint.yml"
